@@ -1,4 +1,5 @@
 Development
+	Added WMP plugin properties enabled and enableContextMenu
     Suppress list display
     Add rtp to the list of streaming uris
     Set PACKAGE_LOCALE_DIR based on --localedir from configure
